src/main/java/com/example/trackon/error/exceptions/ReportNotFoundException.java
package com.example.trackon.error.exceptions;

import com.example.trackon.error.exception.ErrorCode;
import com.example.trackon.error.exception.TrackOnException;

public class ReportNotFoundException extends TrackOnException {
    public ReportNotFoundException() {
        super(ErrorCode.REPORT_NOT_FOUND);
    }
}
